Login/Logout api

--- a/istore/client/public/index.html
+++ b/istore/client/public/index.html
@@ -6,7 +6,10 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="247 hostel website" />
+  <meta name="description" content="I Store website" />
+  <meta name="Access-Control-Allow-Origin" content="*">
+  <meta name="Access-Control-Allow-Methods" content="GET,PUT,POST,DELETE">
+  <meta name="Access-Control-Allow-Headers" content="Content-Type">
   <link rel="apple-touch-icon" href="logo.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -22,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>247 hostel</title>
+  <title>I Store - Tìm cửa hàng theo sản phẩm</title>
 
   <style>
     html,
