--- a/istore/client/public/index.html
+++ b/istore/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="shortcut icon" href="favicon.ico" />
+        <link rel="shortcut icon" href="https://res.cloudinary.com/dxgbnd5t6/image/upload/v1573959039/istore/public/icons/logo_f3xhus.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="I Store website" />
@@ -12,7 +12,7 @@
             content="GET,PUT,POST,DELETE"
         />
         <meta name="Access-Control-Allow-Headers" content="Content-Type" />
-        <link rel="apple-touch-icon" href="logo.png" />
+        <link rel="apple-touch-icon" href="https://res.cloudinary.com/dxgbnd5t6/image/upload/v1573959040/istore/public/icons/favicon_ktouie.ico" />
         <!--
         manifest.json provides metadata used when your web app is installed on a
         user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
