--- a/istore/client/public/index.html
+++ b/istore/client/public/index.html
@@ -30,6 +30,7 @@
         <title>I Store - Tìm cửa hàng theo sản phẩm</title>
 
         <link href="https://fonts.googleapis.com/css?family=Hind:400,700" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="resources/fonts/icon-font.min.css">
 
         <style>
             html,
@@ -43,6 +44,40 @@
                 height: 100%;
                 padding: 0px;
                 margin: 0px;
+            }
+            /*For Spinner*/
+            @-webkit-keyframes spinner-grow{
+              0%{
+                -webkit-transform:scale(0);
+                transform:scale(0)
+                }
+              50%{
+                opacity:1
+              }
+            }
+            @keyframes spinner-grow{
+              0%{
+                -webkit-transform:scale(0);
+                transform:scale(0)
+              }
+              50%{
+                opacity:1
+              }
+            }
+            .spinner-grow{
+              display:inline-block;
+              width:2rem;
+              height:2rem;
+              vertical-align:text-bottom;
+              background-color:currentColor;
+              border-radius:50%;
+              opacity:0;
+              -webkit-animation:spinner-grow .75s linear infinite;
+              animation:spinner-grow .75s linear infinite
+            }
+            .spinner-grow-sm {
+                width: 1rem;
+                height: 1rem;
             }
         </style>
     </head>
