--- a/istore/client/public/index.html
+++ b/istore/client/public/index.html
@@ -30,7 +30,7 @@
         <title>I Store - Tìm cửa hàng theo sản phẩm</title>
 
         <link href="https://fonts.googleapis.com/css?family=Hind:400,700" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="resources/fonts/icon-font.min.css">
+        <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/resources/fonts/icon-font.min.css">
 
         <style>
             html,
