--- a/istore/client/public/index.html
+++ b/istore/client/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="shortcut icon" href="https://res.cloudinary.com/dxgbnd5t6/image/upload/v1573959039/istore/public/icons/logo_f3xhus.png" />
+        <link
+            rel="shortcut icon"
+            href="https://res.cloudinary.com/dxgbnd5t6/image/upload/v1573959039/istore/public/icons/logo_f3xhus.png"
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="I Store website" />
@@ -12,7 +15,10 @@
             content="GET,PUT,POST,DELETE"
         />
         <meta name="Access-Control-Allow-Headers" content="Content-Type" />
-        <link rel="apple-touch-icon" href="https://res.cloudinary.com/dxgbnd5t6/image/upload/v1573959040/istore/public/icons/favicon_ktouie.ico" />
+        <link
+            rel="apple-touch-icon"
+            href="https://res.cloudinary.com/dxgbnd5t6/image/upload/v1573959040/istore/public/icons/favicon_ktouie.ico"
+        />
         <!--
         manifest.json provides metadata used when your web app is installed on a
         user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -29,8 +35,15 @@
         -->
         <title>I Store - Tìm cửa hàng theo sản phẩm</title>
 
-        <link href="https://fonts.googleapis.com/css?family=Hind:400,700" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/resources/fonts/icon-font.min.css">
+        <link
+            href="https://fonts.googleapis.com/css?family=Hind:400,700"
+            rel="stylesheet"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="%PUBLIC_URL%/resources/fonts/icon-font.min.css"
+        />
 
         <style>
             html,
@@ -46,38 +59,43 @@
                 margin: 0px;
             }
             /*For Spinner*/
-            @-webkit-keyframes spinner-grow{
-              0%{
-                -webkit-transform:scale(0);
-                transform:scale(0)
+            @-webkit-keyframes spinner-grow {
+                0% {
+                    -webkit-transform: scale(0);
+                    transform: scale(0);
                 }
-              50%{
-                opacity:1
-              }
+                50% {
+                    opacity: 1;
+                }
             }
-            @keyframes spinner-grow{
-              0%{
-                -webkit-transform:scale(0);
-                transform:scale(0)
-              }
-              50%{
-                opacity:1
-              }
+            @keyframes spinner-grow {
+                0% {
+                    -webkit-transform: scale(0);
+                    transform: scale(0);
+                }
+                50% {
+                    opacity: 1;
+                }
             }
-            .spinner-grow{
-              display:inline-block;
-              width:2rem;
-              height:2rem;
-              vertical-align:text-bottom;
-              background-color:currentColor;
-              border-radius:50%;
-              opacity:0;
-              -webkit-animation:spinner-grow .75s linear infinite;
-              animation:spinner-grow .75s linear infinite
+            .spinner-grow {
+                display: inline-block;
+                width: 2rem;
+                height: 2rem;
+                vertical-align: text-bottom;
+                background-color: currentColor;
+                border-radius: 50%;
+                opacity: 0;
+                -webkit-animation: spinner-grow 0.75s linear infinite;
+                animation: spinner-grow 0.75s linear infinite;
             }
             .spinner-grow-sm {
                 width: 1rem;
                 height: 1rem;
+            }
+
+            .avatarHeader {
+                width: 36px;
+                height: 36px;
             }
         </style>
     </head>
@@ -95,6 +113,5 @@
         To begin the development, run `npm start` or `yarn start`.
         To create a production bundle, use `npm run build` or `yarn build`.
         -->
-
     </body>
 </html>
