fix short cut icon

--- a/istore/client/public/index.html
+++ b/istore/client/public/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link
-            rel="shortcut icon"
-            href="https://res.cloudinary.com/dxgbnd5t6/image/upload/v1573959039/istore/public/icons/logo_f3xhus.png"
-        />
+        <link rel="shortcut icon" href="logo.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="I Store website" />
