--- a/istore/client/public/index.html
+++ b/istore/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="shortcut icon" href="logo.png" />
+        <link rel="shortcut icon" href="%PUBLIC_URL%/resources/icons/logo.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="I Store website" />
@@ -14,7 +14,7 @@
         <meta name="Access-Control-Allow-Headers" content="Content-Type" />
         <link
             rel="apple-touch-icon"
-            href="https://res.cloudinary.com/dxgbnd5t6/image/upload/v1573959040/istore/public/icons/favicon_ktouie.ico"
+            href="%PUBLIC_URL%/resources/icons/logo.svg"
         />
         <!--
         manifest.json provides metadata used when your web app is installed on a
